# FlashI2V

./: .gitignore  LICENSE  README.md  filter_data.py  index.html  inference_flashi2v.py  merge_wan_weights.py  pretrain_flashi2v.py  pyproject.toml  requirements.txt
configs/train/gpu/: flashi2v_14b.yaml  t2v_1_3b.yaml
configs/train/npu/: flashi2v_14b.yaml  flashi2v_1_3b.yaml
examples/flashi2v/: all_videos.txt  filter_config.yaml  filter_data.py
examples/flashi2v/1.3b/: data.json  inference.sh  inference_model.json  pretrain_ddp.sh  pretrain_model_flashi2v.json
examples/flashi2v/test_i2v/: image.txt
examples/wan2.1/: all_videos.txt  convert.sh
examples/wan2.1/test_i2v/: image.txt
flashi2v/data/dataloader/: collator.py
flashi2v/data/datasets/: flashi2v_dataset.py  t2v_dataset.py
flashi2v/distributed/: checkpoint.py  fsdp2_wrapper.py  tp_cp_wrapper.py  utils.py
flashi2v/modules/: attention.py  want2v.py
flashi2v/pipelines/: flashi2v_pipeline.py  t2v_pipeline.py
flashi2v/utils/: clip_grads.py  encoder_cache.py  infer_utils.py
infer/: infer_flashi2v.py  infer_t2v.py
megatron/core/: utils.py
megatron/core/optimizer/: clip_grads.py
megatron/training/: initialize.py  training.py
mindspeed_mm/: __init__.py  training.py
mindspeed_mm/configs/: config.py
mindspeed_mm/data/: __init__.py
mindspeed_mm/data/data_utils/: constants.py  data_transform.py  image_reader.py  utils.py  video_reader.py  wan_utils.py
mindspeed_mm/data/dataloader/: data_collator.py  dataloader.py  sampler.py
mindspeed_mm/data/datasets/: flashi2v_dataset.py  wan_dataset.py
mindspeed_mm/models/: __init__.py  flashi2v_model.py  sora_model.py
mindspeed_mm/models/ae/: base.py
mindspeed_mm/models/common/: checkpoint.py  normalize.py
mindspeed_mm/models/diffusion/: ddpm.py  diffusers_scheduler.py  diffusion_model.py  diffusion_utils.py  flow_match_scheduler.py  rflow.py
mindspeed_mm/models/predictor/: predict_model.py
mindspeed_mm/models/text_encoder/: text_encoder.py  (+1 more)
mindspeed_mm/tasks/: __init__.py
mindspeed_mm/tools/: tools.json
mindspeed_mm/utils/: filter.py  utils.py
static/css/: index.css
train/: train.py  train_flashi2v.py
(+21 files in other folders)
